Modernize 'new Boolean' to 'Boolean.valueOf'