@@ -1,5 +1,5 @@
 /*
- * Copyright 2004-2022 the original author or authors.
+ * Copyright 2004-2025 the original author or authors.
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -73,9 +73,9 @@ public class StatementLogProxy extends BaseLogProxy implements InvocationHandler
       } else if ("equals".equals(method.getName())) {
         Object ps = params[0];
         if (ps instanceof Proxy) {
-          return new Boolean(proxy == ps);
+          return Boolean.valueOf(proxy == ps);
         }
-        return new Boolean(false);
+        return Boolean.valueOf(false);
       } else if ("hashCode".equals(method.getName())) {
         return Integer.valueOf(proxy.hashCode());
       } else {
